# frunk

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  dependency-graph.puml  help.html  settings.html  src-files.js
.github/workflows/: benchmarks.yml  ci.yml  fuzz.yml
benches/: generic.rs  hlist.rs  labelled.rs  monoid.rs  path.rs  semigroup.rs  transmogrify.rs  validated.rs
core/: Cargo.toml
core/src/: coproduct.rs  gat.rs  generic.rs  hlist.rs  indices.rs  labelled.rs  lib.rs  macros.rs  path.rs  test_structs.rs  traits.rs  tuples.rs
derives/: Cargo.toml
derives/src/: derive_generic.rs  derive_labelled_generic.rs  lib.rs
dev/bench/: data.js
docs/: ERROR_GUIDE.md
examples/: 01_hlist_basics.rs  02_generic_convert.rs  03_sculpting.rs  04_validated_forms.rs  05_monoid_config.rs  generic.rs  labelled.rs  paths.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: generic_convert.rs
laws/: Cargo.toml
laws/src/: lib.rs  monoid_laws.rs  semigroup_laws.rs  wrapper.rs
ordofp/: all.html  derive.Generic.html  derive.LabelledGeneric.html  index.html  macro.Coprod.html  macro.HList.html  macro.field.html  macro.hlist.html  macro.hlist_pat.html  macro.poly_fn.html  sidebar-items.js
ordofp/coproduct/: enum.CNil.html  enum.Coproduct.html  index.html  trait.CoprodInjector.html  trait.CoprodUninjector.html  trait.CoproductEmbedder.html  trait.CoproductFoldable.html  trait.CoproductMappable.html  trait.CoproductSelector.html  trait.CoproductSubsetter.html  trait.CoproductTaker.html
ordofp/gat/: index.html  trait.Applicative.html  trait.Apply.html  trait.Functor.html  trait.Monad.html
ordofp/generic/: fn.convert_from.html  fn.from_generic.html  fn.into_generic.html  fn.map_inter.html  fn.map_repr.html  index.html  trait.Generic.html
ordofp/hlist/: fn.h_cons.html  fn.lift_from.html  index.html  struct.HCons.html  struct.HNil.html  trait.HFoldLeftable.html  trait.HFoldRightable.html  trait.HList.html  trait.HMappable.html  trait.HZippable.html  trait.IntoTuple2.html  trait.LiftFrom.html  trait.LiftInto.html  trait.Plucker.html  trait.Sculptor.html  trait.Selector.html
ordofp/indices/: enum.IdentityTransMog.html  index.html  struct.DoTransmog.html  struct.Here.html  struct.LabelledGenericTransmogIndicesWrapper.html  struct.MappingIndicesWrapper.html  struct.PluckedLabelledGenericIndicesWrapper.html  struct.Suffixed.html  struct.There.html
ordofp/labelled/: fn.field_with_name.html  fn.from_labelled_generic.html  fn.into_labelled_generic.html  fn.labelled_convert_from.html  fn.sculpted_convert_from.html  fn.transform_from.html  index.html  struct.Field.html  struct.ValueField.html  trait.ByNameFieldPlucker.html  trait.IntoLabelledGeneric.html  trait.IntoUnlabelled.html  trait.IntoValueLabelled.html  trait.LabelledGeneric.html  trait.Transmogrifier.html
ordofp/monoid/: fn.combine_all.html  fn.combine_n.html  index.html  trait.Monoid.html
ordofp/path/: index.html  struct.Path.html  trait.PathTraverser.html
ordofp/prelude/: index.html
ordofp/semigroup/: fn.combine_all_option.html  fn.combine_n.html  index.html  struct.All.html  struct.Any.html  struct.Max.html  struct.Min.html  struct.Product.html  trait.Semigroup.html
ordofp/traits/: index.html  struct.Poly.html  trait.Func.html  trait.IntoReverse.html  trait.ToMut.html  trait.ToRef.html
ordofp/validated/: enum.Validated.html  index.html  trait.IntoValidated.html
ordofp_core/: all.html  index.html  macro.Coprod.html  macro.HList.html  macro.field.html  macro.hlist.html  macro.hlist_pat.html  macro.poly_fn.html  sidebar-items.js
ordofp_core/coproduct/: enum.CNil.html  enum.Coproduct.html  index.html  trait.CoprodInjector.html  trait.CoprodUninjector.html  trait.CoproductEmbedder.html  trait.CoproductFoldable.html  trait.CoproductMappable.html  trait.CoproductSelector.html  trait.CoproductSubsetter.html  trait.CoproductTaker.html
ordofp_derives/: all.html  derive.Generic.html  derive.LabelledGeneric.html  index.html
ordofp_laws/: all.html  index.html
ordofp_proc_macro_helpers/: all.html  enum.StructType.html  fn.build_coprod_constr.html  fn.build_coprod_type.html  fn.build_coprod_unreachable_arm.html  fn.build_field_expr.html  fn.build_field_pat.html  fn.build_field_type.html  fn.build_hlist_constr.html  fn.build_hlist_type.html  fn.build_label_type.html  fn.build_path_type.html  fn.call_site_ident.html  fn.find_idents_in_expr.html  fn.ref_generics.html  fn.to_ast.html  index.html  struct.FieldBinding.html  struct.FieldBindings.html  struct.VariantBinding.html  struct.VariantBindings.html
ordofp_proc_macros/: all.html  index.html  macro.Path.html  macro.path.html
proc-macro-helpers/: Cargo.toml
proc-macro-helpers/src/: lib.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
search.index/: 0286937cb02f.js  0439a2517ad7.js  062d4aa5902b.js  07dd59516861.js  08432c8f3a09.js  0ac8a18ad742.js  0c53550a67b3.js  0c6fd9b88162.js  0c9a321f98f4.js  0eae5c10aeb4.js  10d9e7f54fa3.js  119576bb6a86.js  142ea99213ca.js  179c1d52f62d.js  1d55dc827090.js  1d81a6721198.js  234a7bfe1342.js  284b393c1b1e.js  2a369705c78a.js  2c2407201e3d.js  2c86e0c54d28.js  2fef491199b4.js  3102b3761abf.js  31a3e9600d4d.js  343fd02e2b4b.js  36182af3586a.js  3675c4cad003.js  3c2c18ea7a96.js  40037b08ea85.js  406e6ba6460d.js  432aff160570.js  436479fb0fc8.js  494f6aa5b203.js  4b470c079af6.js  4f9992332780.js  5467a686769b.js  54c87ab2cda6.js  55c92f2f8048.js  5a67c05b8a2b.js  5ae54c015020.js  (+19 more)
src/: lib.rs  monoid.rs  semigroup.rs  validated.rs
tests/: coproduct_tests.rs  generic_tests.rs  labelled_tests.rs  macro_tests.rs  validated_tests.rs
(+265 files in other folders)
