[package]
name = "ordofp"
edition = "2021"
version = "0.5.0"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "OrdoFP provides developers with a number of functional programming tools like HList, Coproduct, Generic, LabelledGeneric, Validated, Monoid, Semigroup and friends."
license = "MIT"
documentation = "https://docs.rs/ordofp"
repository = "https://github.com/lloydmeta/ordofp"
keywords = ["OrdoFP", "HList", "Generic", "Validated", "Monoid"]
readme = "README.md"

[badges]
travis-ci = { repository = "lloydmeta/ordofp" }

[dev-dependencies]
time = "0.3"

[dependencies.ordofp_core]
path = "core"
default-features = false
version = "0.5.0"

[dependencies.ordofp_proc_macros]
path = "proc-macros"
default-features = false
optional = true
version = "0.5.0"

[dependencies.ordofp_derives]
path = "derives"
default-features = false
version = "0.5.0"

[dev-dependencies.ordofp_laws]
path = "laws"
default-features = false
version = "0.5.0"

[dependencies]
serde = { version = "^1.0", optional = true, features = [ "derive" ] }

[features]
default = ["validated", "proc-macros", "alloc"]
validated = ["alloc"]
proc-macros = ["ordofp_proc_macros"]
std = ["alloc", "serde?/std"]
alloc = ["ordofp_core/alloc", "serde?/alloc"]

[[example]]
name = "paths"
required-features = ["proc-macros"]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1 # https://users.rust-lang.org/t/odd-benchmark-results-compiler-optimisation-wall/10503

[workspace]
members = [
    "proc-macro-helpers",
    "core",
    "proc-macros",
    "derives",
    "laws"
]
exclude = ["fuzz"]
