[package]
name = "ordofp_core"
edition = "2021"
version = "0.5.0"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "OrdoFP core provides developers with HList, Coproduct, LabelledGeneric and Generic"
license = "MIT"
documentation = "https://docs.rs/ordofp_core"
repository = "https://github.com/lloydmeta/ordofp"
keywords = ["OrdoFP", "HList", "Generic", "Coproduct", "LabelledGeneric"]

[badges]
travis-ci = { repository = "lloydmeta/ordofp" }

[features]
default = ["alloc"]
alloc = ["serde?/alloc"]

# deprecated -- to be removed in next major version
std = ["alloc"]

[dependencies]
serde = { version = "^1.0", optional = true, features = [ "derive" ] }

[dev-dependencies.ordofp_derives]
path = "../derives"
default-features = false
version = "0.5.0"

[dev-dependencies.ordofp]
path = ".."
default-features = false
version = "0.5.0"

[dev-dependencies.ordofp_proc_macros]
path = "../proc-macros"
default-features = false
version = "0.5.0"
