[package]
name = "ordofp_derives"
edition = "2021"
version = "0.5.0"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "ordofp_derives contains the custom derivations for certain traits in OrdoFP."
license = "MIT"
documentation = "https://docs.rs/ordofp_derives"
repository = "https://github.com/lloydmeta/ordofp"
keywords = ["OrdoFP", "derives"]

[badges]
travis-ci = { repository = "lloydmeta/ordofp" }

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"

[dependencies.ordofp_proc_macro_helpers]
path = "../proc-macro-helpers"
default-features = false
version = "0.5.0"
