[package]
name = "ordofp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.ordofp]
path = ".."

[dependencies.ordofp_core]
path = "../core"
version = "0.5.0"

[[bin]]
name = "generic_convert"
path = "fuzz_targets/generic_convert.rs"
test = false
doc = false
