[package]
name = "ordofp_laws"
edition = "2021"
version = "0.5.0"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "ordofp_laws contains laws for algebras declared in OrdoFP."
license = "MIT"
documentation = "https://docs.rs/ordofp_laws"
repository = "https://github.com/lloydmeta/ordofp"
keywords = ["OrdoFP", "laws", "testing", "algebras"]

[badges]
travis-ci = { repository = "lloydmeta/ordofp" }

[dependencies.ordofp]
path = ".."
default-features = false
version = "0.5.0"
features = ["std"]

[dependencies]
quickcheck = "1.0.3"
