[package]
name = "ordofp_proc_macro_helpers"
edition = "2021"
version = "0.5.0"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Common internal functions for ordofp's proc macros"
license = "MIT"
documentation = "https://docs.rs/ordofp_proc_macro_helpers"
repository = "https://github.com/lloydmeta/ordofp"
keywords = ["OrdoFP", "macros", "internal"]

[badges]
travis-ci = { repository = "lloydmeta/ordofp" }

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

[dependencies.ordofp_core]
path = "../core"
default-features = false
version = "0.5.0"
