[package]
name = "ordofp_proc_macros"
edition = "2021"
version = "0.5.0"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Proc macros for OrdoFP"
license = "MIT"
documentation = "https://docs.rs/ordofp_proc_macros"
repository = "https://github.com/lloydmeta/ordofp"
keywords = ["OrdoFP", "macros"]

[badges]
travis-ci = { repository = "lloydmeta/ordofp" }

[dependencies]
syn = "2"
quote = "1"

[lib]
proc-macro = true


[dependencies.ordofp_core]
path = "../core"
default-features = false
version = "0.5.0"

[dependencies.ordofp_proc_macro_helpers]
path = "../proc-macro-helpers"
default-features = false
version = "0.5.0"
